# agent-burn

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  agent-burn.example.json  justfile  package.json  package.nix  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: AGENTS.md  README.md  (+3 more)
rust/: Cargo.toml
rust/crates/agent-burn/: Cargo.toml  build.rs
rust/crates/agent-burn-cli/: Cargo.toml
rust/crates/agent-burn-cli/src/: cli-help.json  help.rs  help_codegen.rs  lib.rs  parser.rs  tests.rs  types.rs
rust/crates/agent-burn-cli/src/snapshots/: agent_burn_cli__tests__harness_help.snap  agent_burn_cli__tests__root_help.snap  agent_burn_cli__tests__snapshots_cli_parse_shapes.snap  agent_burn_cli__tests__summary_help.snap
rust/crates/agent-burn-terminal/: Cargo.toml
rust/crates/agent-burn-terminal/src/snapshots/: agent_burn_terminal__table__tests__snapshots_ansi_truncation_boundary.snap  agent_burn_terminal__table__tests__snapshots_full_table_with_multiline_cells_and_separators.snap  agent_burn_terminal__table__tests__snapshots_narrow_table_with_wrapping_truncation_and_compact_dates.snap  agent_burn_terminal__title__tests__snapshots_multiline_box_title_layout.snap
rust/crates/agent-burn-test-support/: Cargo.toml
rust/crates/agent-burn/src/: cli.rs  config.rs  config_schema.rs  main.rs  output.rs  pricing.rs  project_names.rs
rust/crates/ccusage/: Cargo.toml
rust/crates/ccusage-cli/src/: cli-commands.json  lib.rs  parser.rs  types.rs
rust/crates/ccusage-terminal/src/: style.rs
rust/crates/ccusage/src/: cli.rs  config.rs  config_schema.rs  main.rs
(+133 files in other folders)
