[workspace]
members = [
	"crates/agent-burn",
	"crates/agent-burn-cli",
	"crates/agent-burn-terminal",
	"crates/agent-burn-test-support",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
opt-level = "s"
